--- a/Rongiajad/app/src/main/res/layout/activity_main.xml
+++ b/Rongiajad/app/src/main/res/layout/activity_main.xml
@@ -19,26 +19,39 @@
 
     <SearchView
         android:id="@+id/searchView"
-        android:layout_width="260dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="287dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="52dp"
         android:background="@drawable/custom_box"
         android:iconifiedByDefault="false"
         android:queryHint="Lähtekoht"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="288dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/custom_box"
+        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
+        android:hint="      Kuupäev"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView2" />
+
     <SearchView
         android:id="@+id/searchView2"
-        android:layout_width="260dp"
-        android:layout_height="41dp"
+        android:layout_width="289dp"
+        android:layout_height="39dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/custom_box"
         android:iconifiedByDefault="false"
         android:queryHint="Lähtekoht"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView">
 
@@ -49,33 +62,6 @@
             tools:layout_editor_absoluteX="76dp"
             tools:layout_editor_absoluteY="163dp" />
     </SearchView>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_apply_settings2"
-        android:layout_width="114dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="145dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="145dp"
-        android:background="@drawable/custom_button"
-        android:text="Otsi"
-        android:textAllCaps="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText1" />
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="259dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/custom_box"
-        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
-        android:hint="      Kuupäev"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView2" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -89,22 +75,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/editTextTextPersonName"
-        style="@style/Widget.AppCompat.TextView.SpinnerItem"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Ajalugu"
-        android:textSize="20sp"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_apply_settings2"
+        android:layout_width="114dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="145dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="145dp"
+        android:background="@drawable/custom_button"
+        android:text="Otsi"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_apply_settings2" />
+        app:layout_constraintTop_toBottomOf="@+id/editText1" />
 
     <TextView
         android:id="@+id/textView3"
@@ -114,6 +98,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:text="Aruküla - Tallinn"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,10 +112,25 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:text="Tallinn - Tartu"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:text="Nõmme - Lilleküla"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 
     <TextView
         android:id="@+id/textView4"
@@ -140,22 +140,27 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:text="Narva - Tallinn"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <TextView
-        android:id="@+id/textView2"
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="32dp"
-        android:text="Nõmme - Lilleküla"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:ems="10"
+        android:enabled="false"
+        android:inputType="textPersonName"
+        android:text="Ajalugu"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_apply_settings2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
