--- a/Elron/app/src/main/res/layout/activity_main.xml
+++ b/Elron/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,89 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/imgLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="90dp"
+        android:contentDescription="@string/elron_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/elron_logo" />
+
+    <AutoCompleteTextView
+        android:id="@+id/etLocation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="64dp"
+        android:drawableEnd="@drawable/location"
+        android:hint="@string/loc"
+        android:textSize="22sp"
+        android:completionThreshold="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
+
+    <AutoCompleteTextView
+        android:id="@+id/etDestination"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginEnd="64dp"
+        android:drawableEnd="@drawable/location"
+        android:hint="@string/dest"
+        android:textSize="22sp"
+        android:completionThreshold="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSwap" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnSwap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:contentDescription="@string/swap_button"
+        android:onClick="onSwap"
+        app:backgroundTint="@color/orange_500"
+        app:fabCustomSize="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etLocation"
+        app:maxImageSize="40dp"
+        app:srcCompat="@drawable/arrows"
+        app:tint="@color/white" />
+
+    <Button
+        android:id="@+id/btnSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:text="@string/search_btn"
+        android:textSize="22sp"
+        app:cornerRadius="50dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnCalendar"
+        app:layout_constraintEnd_toEndOf="@+id/etDestination"
+        app:layout_constraintStart_toEndOf="@+id/btnCalendar" />
+
+    <Button
+        android:id="@+id/btnCalendar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#505050"
+        android:drawableEnd="@drawable/calendar"
+        android:text="@string/date_filler"
+        android:textSize="22sp"
+        android:onClick="onCalendar"
+        app:cornerRadius="30dp"
+        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
+        app:layout_constraintStart_toStartOf="@+id/etDestination"
+        app:layout_constraintTop_toBottomOf="@+id/etDestination" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
