--- a/Elron/app/src/main/res/layout/activity_settings.xml
+++ b/Elron/app/src/main/res/layout/activity_settings.xml
@@ -6,4 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/darkModeSwitch"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:onClick="onTheme"
+        android:text="@string/switch_theme"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
