--- a/Elron/app/src/main/res/layout/activity_main.xml
+++ b/Elron/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/imgLogo"
         android:layout_width="wrap_content"
         android:layout_height="90dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="@string/elron_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,12 +22,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="64dp"
+        android:completionThreshold="1"
         android:drawableEnd="@drawable/location"
         android:hint="@string/loc"
         android:textSize="22sp"
-        android:completionThreshold="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
@@ -68,9 +69,10 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
+        android:elevation="6dp"
+        android:onClick="onSearch"
         android:text="@string/search_btn"
         android:textSize="22sp"
-        android:onClick="onSearch"
         app:cornerRadius="50dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/btnCalendar"
         app:layout_constraintEnd_toEndOf="@+id/etDestination"
@@ -84,12 +86,50 @@
         android:layout_marginEnd="8dp"
         android:backgroundTint="#505050"
         android:drawableEnd="@drawable/calendar"
+        android:elevation="6dp"
+        android:onClick="onCalendar"
         android:text="@string/date_filler"
         android:textSize="22sp"
-        android:onClick="onCalendar"
         app:cornerRadius="30dp"
         app:layout_constraintEnd_toStartOf="@+id/btnSearch"
         app:layout_constraintStart_toStartOf="@+id/etDestination"
         app:layout_constraintTop_toBottomOf="@+id/etDestination" />
+
+    <TextView
+        android:id="@+id/txtHistory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Ajalugu"
+        android:textSize="22sp"
+        app:layout_constraintStart_toStartOf="@+id/etDestination"
+        app:layout_constraintTop_toBottomOf="@+id/btnCalendar" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="1px"
+        android:layout_marginTop="2dp"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintBottom_toBottomOf="@+id/txtHistory"
+        app:layout_constraintEnd_toEndOf="@+id/etDestination"
+        app:layout_constraintStart_toStartOf="@+id/etDestination"
+        app:layout_constraintTop_toBottomOf="@+id/txtHistory" />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/etDestination"
+        app:layout_constraintStart_toStartOf="@+id/etDestination"
+        app:layout_constraintTop_toBottomOf="@+id/view">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
