--- a/Elron/app/src/main/res/layout/activity_settings.xml
+++ b/Elron/app/src/main/res/layout/activity_settings.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:onClick="onTheme"
+        android:onClick="onSwitch"
         android:text="@string/switch_theme"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold"
